--- a/Generic/pom.xml
+++ b/Generic/pom.xml
@@ -33,11 +33,15 @@
             <artifactId>extentreports</artifactId>
             </dependency>
         <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+
+        </dependency>
+        <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
-            <version>2.5</version>
         </dependency>
-    </dependencies>
+   </dependencies>
 
     <build>
         <plugins>
