--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,18 @@
             <dependency>
                 <groupId>com.relevantcodes</groupId>
                 <artifactId>extentreports</artifactId>
-                <version>2.40.2</version>
+                <version>2.41.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>3.15</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
             </dependency>
 
         </dependencies>
